# Go-Rubik

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  copy_dlls.ps1  main.cpp  renderer.h  rubik_cube.cpp  rubik_cube.h
Go (C++)/: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  game.cpp  game.h  main.cpp
Rubik (C++)/: BUILD.md  CMakeLists.txt  README.md  copy_dlls.ps1  renderer.cpp  renderer.h  rubik_cube.cpp  rubik_cube.h
